--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 
 
+
+
+
+
 *{
   padding: 0;
   margin: 0;
@@ -13,7 +17,12 @@ body {
   font-family: Roboto Mono, sans-serif;
   background-color: #171717;
   margin: 20px 20px 20px 20px;
+
 }
+
+
+
+
 
 .wrapper{
   max-width: 1440px;
@@ -21,17 +30,15 @@ body {
 }
 
 .header {
+  
   color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 100px;
+  z-index: 2;
 }
 
-.header .logo img {
-  width: 50px;
-  height: 50px;
-}
 
 
 .header .lang a {
@@ -43,35 +50,71 @@ body {
   padding: 5px;
 }
 
-.menu {
+.header .lang{
   display: flex;
-  justify-content: center;
-}
-
-.menu li {
-  margin: auto 10px;
-  list-style-type: none;
-}
-
-.menu li a {
-  color: #f2f2ff;
-  text-decoration: none;
-  position: relative;
-}
-
-.main-ctn {
-  height: 500px;
-  color: #ffffff;
-  text-align: center;
-  background: url('./assets/wifi-moon.webp');
-  background-size: cover;
-  display: flex;
-  justify-content: center;
   align-items: center;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  gap: 15px;
 }
 /*  */
+
+
+.navbar {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 75px;
+  background: rgb(6, 10, 14);
+  z-index: 2;
+  padding: 20px;
+}
+
+.navbar__wrap {
+  display: flex;
+  justify-content: space-between;
+  height: 100%;
+  
+}
+
+.hamb {
+  display: none;
+}
+
+.popup {
+  display: none;
+}
+
+.logo {
+  text-decoration: none;
+  color: #fff;
+  font-size: 20px;
+  font-weight: bold;
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+}
+
+.menu > li > a {
+  text-decoration: none;
+}
+
+.navbar__wrap .menu {
+  display: flex;
+}
+
+.navbar__wrap .menu > li {
+  display: flex;
+  align-items: stretch;
+}
+
+.navbar__wrap .menu > li > a {
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+  color: rgba(255, 255, 255);
+}
+
+
 
 .header-name a{
   text-decoration: none;
@@ -91,24 +134,26 @@ body {
   margin-bottom: 80px;
 }
 
-.title-img-wrapper img{
-  border-radius: 30px;
+.title-img-wrapper{
+  display: flex;
+  align-items: center;
 }
 
+.title-img-wrapper img{
+  border-radius: 30px;
+  text-align: center;
+  
+}
 
-.title-description{
+.title-img-wrapper h2{
   text-align: center;
   font-size: 80px;
   text-shadow: 2px 2px 2px #000000;
-  width: 1000px;
   color: #ffffff;
   position: absolute;
-  top: 150px;
+  left: 30px;
+
 }
-
-
-
-
 
 
 
@@ -118,9 +163,11 @@ body {
   background: #2d2d2d;
   padding: 35px;
   gap: 12px;
-  margin: 50px auto;
+  margin: 50px 100px;
   border-radius: 15px;
   justify-content: space-around;
+  flex-wrap: wrap;
+  min-width: 200px;
 }
 
 .all-elements-wrapper{
@@ -130,6 +177,7 @@ body {
 .input{
   color: #ffffff;
   outline: none;
+  width: 125px;
 }
 
 
@@ -139,7 +187,7 @@ body {
 }
 
 .button{
-  margin-left: 30px;
+  margin-left: 10px;
   display: flex;
   background: #6456ff;
   color: #ffffff;
@@ -231,6 +279,7 @@ body {
 
 .space-img-wrapper{
   overflow: hidden;
+  position: relative;
   text-align: center;
   width: 670px;
   height: 670px;
@@ -250,46 +299,65 @@ body {
 }
 
 .apollo-right-container{
+  display: flex;
+  flex-direction: column;
   position: relative;
   text-align: center;
+  align-items: center;
 }
 
 
 /* apollo points */
 .apollo-point-wrapper{
-  position: absolute;
-  top: 300px;
-  left: 300px;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   cursor: pointer;
 }
 
+.test-wrapper{
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 50%;
+  left:50%;
+  transform:translate(-50%, -50%);
+}
+
 .apollo-point-wrapper-11{
-  top: 392px;
-  left: 385px;
+  position: absolute;
+  top: 20px;
+  left: 60px;
 }
 .apollo-point-wrapper-12{
-  top: 450px;
-  left: 50px;
+  position: absolute;
+  top: 45px;
+  right: 182px;
 }
 
 .apollo-point-wrapper-14{
-  top: 410px;
-  left: 80px;
+  position: absolute;
+  top: 20px;
+  right: 120px;
 }
 .apollo-point-wrapper-15{
-  top: 200px;
-  left: 280px;
+  position: absolute;
+  bottom: 100px;
+  right: 0;
+
 }
 .apollo-point-wrapper-16{
-  top: 470px;
-  left: 330px;
+  position: absolute;
+  top: 65px;
+  left: 15px;
+  
 }
 .apollo-point-wrapper-17{
-  top: 265px;
-  left: 410px;
+  position: absolute;
+  bottom: 60px;
+  left: 90px;
+  
 }
 
 .apollo-point{
@@ -356,7 +424,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
-  width: 1200px;
+  margin-left: 100px;
 
 }
 
@@ -378,6 +446,7 @@ body {
 /* section-card */
 .section-card{
   display: flex;
+  flex-wrap: wrap;
   gap: 25px;
   justify-content: center;
   color: #ffffff;
@@ -476,4 +545,257 @@ body {
 .travel-duration{
   opacity: 0.7;
   font-size: 14px;
+}
+
+
+@media screen and (max-width: 1260px) {
+  /* section-information  */
+
+    .section-information{
+      display: block;
+    }
+
+    /*  left container  */
+    .apollo-left-container{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .space-img{
+      position: relative;
+      left: auto;
+      width: 600px;
+    }
+
+    /* /////////////// */
+
+  /*  */
+
+}
+
+
+
+@media screen and (max-width: 992px) {
+
+  .navbar__wrap .menu {
+    display: none;
+  }
+
+  .hamb {
+    display: flex;
+    align-items: center;
+  }
+
+  .hamb__field {
+    padding: 10px 20px;
+    cursor: pointer;
+  }
+
+  .bar {
+    display: block;
+    width: 30px;
+    height: 3px;
+    margin: 6px auto;
+    background-color: #fff;
+    transition: 0.2s;
+  }
+
+  .popup {
+    position: fixed;
+    top: 75px;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(10, 9, 9);
+    z-index: 100;
+    display: flex;
+    transition: 0.3s;
+    opacity: 1;
+  }
+
+  .popup.open {
+    left: 0;
+
+  }
+
+  .popup .menu {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    padding: 50px 0;
+    overflow: auto;
+  }
+
+  .popup .menu > li {
+    width: 100%;
+  }
+
+  .popup .menu > li > a {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 20px 0;
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+  }
+
+  .popup .menu > li > a:hover {
+    background-color: rgba(122, 82, 179, 0.1);
+  }
+
+  .hamb__field.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+
+  .hamb__field.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+
+  .hamb__field.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+
+  body.noscroll {
+    overflow: hidden;
+  }
+
+
+
+
+  /*  */
+  .section-title .title-img-wrapper img{
+    width: 600px;
+    text-align: center;
+  }
+
+  .title-img-wrapper h2{
+    font-size: 28px;
+    position: absolute;
+    left: auto;
+  }
+  /* //////////////////// */
+
+  /* form */
+  .form-wrapper{
+    margin: 50px 50px;
+  }
+  /* ////////////// */
+
+  /* section-information  */
+
+  /*  */
+
+
+}
+
+
+
+
+@media screen and (max-width: 768px) {
+  /*  */
+  .section-title .title-img-wrapper img{
+    width: 500px;
+    text-align: center;
+  }
+
+  .title-img-wrapper h2{
+    font-size: 24px;
+    position: absolute;
+    left: auto;
+  }
+  /* ////////////////////// */
+
+  /* form */
+  .form-wrapper{
+    margin: 50px 25px;
+  }
+  /* ////////////// */
+
+
+  /* section-information  */
+
+    /*  left container  */
+
+    .space-img{
+      position: relative;
+      left: auto;
+      width: 450px;
+    }
+
+    /* /////////////// */
+
+  /*  */
+  /* section-question */
+  
+  .question-header{
+    padding-left: 20px;
+    width: 500px;
+    margin-left: auto;
+  }
+
+  .anwers-wrapper{
+    justify-content: center;
+    margin-left: 20px;
+  
+  }
+
+
+
+
+}
+
+@media screen and (max-width: 650px) {
+  /*  */
+  .section-title .title-img-wrapper img{
+    width: 400px;
+    text-align: center;
+  }
+
+  .title-img-wrapper h2{
+    font-size: 20px;
+    position: absolute;
+    left: auto;
+  }
+
+  /* ////////////////////// */
+  
+  /* form */
+  .form-wrapper{
+    margin: 50px 0;
+  }
+  /* ////////////// */
+
+
+  /* section-information  */
+
+      /*  left container  */
+
+  .apollo-wrapper-description{
+    width: 300px;
+  }
+
+      /* /////////////// */
+
+  /*  */
+
+  
+
+}
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 390px) {
+
 }
